--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
 
     <string name="com.twitter.sdk.android.CONSUMER_KEY">0YU6QwzQTfJAsXQ1x0tGRoku0</string>
     <string name="com.twitter.sdk.android.CONSUMER_SECRET">TSVmp7DfPxXj9UljJQKOXFpWzpsKUQ46wDyh0ehErXNnqipWk0</string>
+    <string name="search">search</string>
+    <string name="search_hint">Search Speaker</string>
 
 
 </resources>
