--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,15 @@
 
     <string name="action_settings">Settings</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
     <string name="com.twitter.sdk.android.CONSUMER_KEY">0YU6QwzQTfJAsXQ1x0tGRoku0</string>
     <string name="com.twitter.sdk.android.CONSUMER_SECRET">TSVmp7DfPxXj9UljJQKOXFpWzpsKUQ46wDyh0ehErXNnqipWk0</string>
+
+
+
+    <!-- Presenter / Moderator / Leader Names and Titles -->
+
+
 
 </resources>
