Further polished schedule, minor change to speakerAdapter constructor.
Now requires a boolean to determine if it is adapting for speaker list on speaker page vs. speaker list on schedule event page. Each use different layout, and so the layoutItemId is determind within the adapter based on this boolean value.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,14 @@
     <string name="Bio">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mollis est vitae erat laoreet consectetur. Mauris dui mauris, dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
     </string>
+
+
+    <!-- activity_event_details.xml -->
+    <string name="presenters">Presenters:</string>
+    <string name="moderators">Moderators:</string>
+    <string name="leaders">Leaders:</string>
+    <string name="panelists">Panelists:</string>
+
+    <!-- Conference Names -->
+    <string name="conference_name">MRLC 2018</string>
 </resources>
