--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,8 +45,6 @@
     <string name="Tom_Smith"> ENV SP, CAE, F.ASCE, Executive Director </string>
 
 
-
-
     <!-- activity_event_details.xml -->
     <string name="presenters">Presenters:</string>
     <string name="moderators">Moderators:</string>
@@ -55,4 +53,7 @@
 
     <!-- Conference Names -->
     <string name="conference_name">MRLC 2018</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
